just for an insight

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     
-    <img src="./img/myvector.png" alt="myVectorArt">
+    <div id="homediv">
+        <div id="imgdiv" class = "mainchilddiv">
+            <img id="myimage" src="./img/myvectorcropped.png" alt="myVectorArt">
+        </div>
+        <div class = "mainchilddiv" id="desc"> 
+            <h1>Vighnesh S.</h1>
+            <h3>This site is under construction and will be up soon </h3>
+        
+        </div>
+    </div>
     <script src="./js/main.js" id="vector"></script>
 </body>
 </html>
