--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vighnesh s | HOME</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     
@@ -15,10 +16,21 @@
         </div>
         <div class = "mainchilddiv" id="desc"> 
             <h1>Vighnesh S.</h1>
-            <h3>This site is under construction and will be up soon </h3>
-        
+            <ul>
+                <li>UI / UX Designer __________</li>
+                <li>ML enthhusiast __________</li>
+                <li>Full Stack Developer __________</li>
+                <span>
+                    <i class="fa fa-car" style="font-size:48px;"></i>
+                    <i class="fa fa-car" style="font-size:48px;"></i>
+                    <i class="fa fa-car" style="font-size:48px;"></i>
+                    <i class="fa fa-car" style="font-size:48px;"></i>
+                </span>
+            </ul>
         </div>
     </div>
+   
+
     <script src="./js/main.js" id="vector"></script>
 </body>
 </html>
