--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vighnesh s | HOME</title>
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/93e231ad17.js"></script>
 </head>
 <body>
     
     <div id="homediv">
         <div id="imgdiv" class = "mainchilddiv">
-            <img id="myimage" src="./img/myvectorcropped.png" alt="myVectorArt">
+            <img id="myimage" src="./assets/myvector-cropped.png" alt="myVectorArt">
         </div>
         <div class = "mainchilddiv" id="desc"> 
             <h1>Vighnesh S.</h1>
-            <ul>
+            <ul id = "skillSetList">
                 <li>UI / UX Designer __________</li>
                 <li>ML enthhusiast __________</li>
                 <li>Full Stack Developer __________</li>
-                <span>
-                    <i class="fa fa-car" style="font-size:48px;"></i>
-                    <i class="fa fa-car" style="font-size:48px;"></i>
-                    <i class="fa fa-car" style="font-size:48px;"></i>
-                    <i class="fa fa-car" style="font-size:48px;"></i>
-                </span>
             </ul>
+                <span>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-github-square"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-telegram"></i>
+                    <i class="fab fa-youtube-square"></i>
+                </span>
+            
         </div>
     </div>
    
