--- a/new.html
+++ b/new.html
@@ -14,7 +14,7 @@
   
   
   
-  
+  <h1>THIS IS NOT WORKING AS OF NOW</H1>
   <form class="sucess-none" id="newContact">
   <div class="inputs">
       <input type="text" value="" name="FNAME" class="required name" id="name" placeholder="Name:" style=" width: 35%; float: left; background: none; padding: 1.75em 2em; margin: 0; border-radius: .25em; box-shadow: none; border: none;">
