--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         <div class = "mainchilddiv" id="desc"> 
             <h1>Vighnesh S.</h1>
             <ul id = "skillSetList">
-                <li>UI / UX Designer __________</li>
-                <li>ML enthhusiast __________</li>
-                <li>Full Stack Developer __________</li>
+                <li style="background-color:green; width:50%;">
+                    <div>UI / UX Designer</div> 
+                    
+                
+                </li> 
+                <div class = "underline"></div>
+                <li>ML enthhusiast </li>
+                <li>Full Stack Developer </li>
             </ul>
                 <span>
                     <i class="fab fa-linkedin"></i>
