day#2 corrected the underline thingy

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         <div class = "mainchilddiv" id="desc"> 
             <h1>Vighnesh S.</h1>
             <ul id = "skillSetList">
-                <li style="background-color:green; width:50%;">
-                    <div>UI / UX Designer</div> 
-                    
+                <li style="display:table;width:100%;">
+                    <div class = "underlinetxt">UI/UXDesigner</div> 
+                    <div class = "underline"></div>
                 
                 </li> 
-                <div class = "underline"></div>
                 <li>ML enthhusiast </li>
                 <li>Full Stack Developer </li>
             </ul>
